--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="heroContainer">
             <h1 class="heroText">This website is awesome</h1>
             <p class="heroSubtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-            <button class="signUpBtn">Sign up</button>
+            <button class="signUpBtn" type="button">Sign up</button>
         </div>
         <div class="heroImgContainer">
             <img src="images/520x240.gif" alt="Hero image placeholder" class="heroImg">
