Change default cursor to default

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </ul>
         </nav>
     </header>
-    <div id="MainTitleContainer">
+    <div id="MainTitleContainer" class="landingSection">
         <div class="heroContainer">
             <h1 class="heroText">This website is awesome</h1>
             <p class="heroSubtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
