Add information section

--- a/index.html
+++ b/index.html
@@ -27,5 +27,26 @@
             <img src="images/520x240.gif" alt="Hero image placeholder" class="heroImg">
         </div>
     </div>
+    <div id="MainInfoContainer" class="landingSection">
+        <h1 class="mainInfoTitle">Some random information.</h1>
+        <div class="infoImages">
+            <div class="infoCard">
+                <div class="infoImgContainer"><img src="images/180x180.gif" alt="180 by 180 info image placeholder" class="infoImg"></div>
+                <p class="infoImgDescription">this is some subtext under an illustrration or image</p>
+            </div>
+            <div class="infoCard">
+                <div class="infoImgContainer"><img src="images/180x180.gif" alt="180 by 180 info image placeholder" class="infoImg"></div>
+                <p class="infoImgDescription">this is some subtext under an illustrration or image</p>
+            </div>
+            <div class="infoCard">
+                <div class="infoImgContainer"><img src="images/180x180.gif" alt="180 by 180 info image placeholder" class="infoImg"></div>
+                <p class="infoImgDescription">this is some subtext under an illustrration or image</p>
+            </div>
+            <div class="infoCard">
+                <div class="infoImgContainer"><img src="images/180x180.gif" alt="180 by 180 info image placeholder" class="infoImg"></div>
+                <p class="infoImgDescription">this is some subtext under an illustrration or image</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
