--- a/index.html
+++ b/index.html
@@ -31,22 +31,26 @@
         <h1 class="mainInfoTitle">Some random information.</h1>
         <div class="infoImages">
             <div class="infoCard">
-                <div class="infoImgContainer"><img src="images/180x180.gif" alt="180 by 180 info image placeholder" class="infoImg"></div>
+                <div class="infoImgContainer"></div>
                 <p class="infoImgDescription">this is some subtext under an illustrration or image</p>
             </div>
             <div class="infoCard">
-                <div class="infoImgContainer"><img src="images/180x180.gif" alt="180 by 180 info image placeholder" class="infoImg"></div>
+                <div class="infoImgContainer"></div>
                 <p class="infoImgDescription">this is some subtext under an illustrration or image</p>
             </div>
             <div class="infoCard">
-                <div class="infoImgContainer"><img src="images/180x180.gif" alt="180 by 180 info image placeholder" class="infoImg"></div>
+                <div class="infoImgContainer"></div>
                 <p class="infoImgDescription">this is some subtext under an illustrration or image</p>
             </div>
             <div class="infoCard">
-                <div class="infoImgContainer"><img src="images/180x180.gif" alt="180 by 180 info image placeholder" class="infoImg"></div>
+                <div class="infoImgContainer"></div>
                 <p class="infoImgDescription">this is some subtext under an illustrration or image</p>
             </div>
         </div>
+    </div>
+    <div id="QuoteContainer" class="landingSection">
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <span class="quoteAuthor">-Thor, God of Thunder</span>
     </div>
 </body>
 </html>
