--- a/index.html
+++ b/index.html
@@ -52,5 +52,16 @@
         <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         <span class="quoteAuthor">-Thor, God of Thunder</span>
     </div>
+    <div class="landingSection" id="CTAContainer">
+        <div class="CTA">
+            <div class="CTAText">
+                <span class="CTATitle">Call to action! It's time!</span>
+                <span class="CTADescription">Sign up for our product by clicking that button right over there!</span>
+            </div>
+            <div class="signUpBtn2Container">
+                <button class="signUpBtn2">Sign Up</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
