--- a/index.html
+++ b/index.html
@@ -63,5 +63,8 @@
             </div>
         </div>
     </div>
+    <footer id="Copyright">
+        <span>Copyright © The Odin Project 2021</span>
+    </footer>
 </body>
 </html>
